# lc-studylab

./: LICENSE  README.md
backend/: .gitignore  LEARNING_GUIDE.md  README-ENHANCED-CHAT.md  README.md  TROUBLESHOOTING.md  env.example  pyproject.toml  requirements.txt  start_cli.sh  start_rag_cli.sh  start_server.sh  test_deep_research.sh  test_enhanced.sh
backend/agents/: __init__.py  base_agent.py
backend/api/: __init__.py  http_server.py
backend/api/routers/: __init__.py  chat.py  deep_research.py  rag.py
backend/config/: __init__.py  logging.py  settings.py
backend/core/: __init__.py  extractors.py  models.py  prompts.py  usage_tracker.py
backend/core/guardrails/: __init__.py  content_filters.py  input_validators.py  middleware.py  output_validators.py  schemas.py
backend/deep_research/: __init__.py  deep_agent.py  safe_deep_agent.py  subagents.py
backend/docs/: EMBEDDING_MODEL_CONFIG.md  NOTEBOOK_ENV_FIX.md  README-CHATBOT-ENHANCED.md
backend/notebooks/: 00_overview.ipynb  README.md  stage_01_basic_agent.ipynb  stage_02_rag.ipynb  stage_03_workflow.ipynb  stage_04_deep_research.ipynb  stage_05_guardrails.ipynb
backend/rag/: __init__.py  embeddings.py  index_manager.py  loaders.py  rag_agent.py  retrievers.py  safe_rag_agent.py  splitters.py  vector_stores.py
backend/scripts/: __init__.py  demo_cli.py  rag_cli.py  test_basic.py  test_deep_research.py  test_enhanced_stream.py  test_guardrails.py  test_rag_query.py  test_safe_rag.py  test_weather.py  update_index.py
backend/workflows/: safe_nodes.py  safe_study_flow.py
frontend/: README.md  (+5 more)
(+94 files in other folders)
