[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "beautifulsoup4==4.12.3",
    "click==8.1.8",
    "faiss-cpu==1.12.0",
    "fastapi==0.121.0",
    "httpx[socks]==0.28.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters==1.0.0",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "loguru==0.7.3",
    "lxml==5.3.0",
    "markdown==3.7",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "pypdf==5.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "rich==13.9.4",
    "tavily-python==0.5.0",
    "unstructured==0.18.15",
    "uvicorn[standard]==0.34.0",
]
